cmake_minimum_required(VERSION 3.27)
project(leetcode)
set(CMAKE_CXX_STANDARD 17)

add_subdirectory(exc/sum)
add_subdirectory(exc/palindrome)
add_subdirectory(exc/rod)
add_subdirectory(exc/roman_int)
add_subdirectory(exc/water)
add_subdirectory(exc/prefix)
add_subdirectory(exc/anagram)
add_subdirectory(exc/valid_parenthesis)
add_subdirectory(exc/merge_lists)
add_subdirectory(exc/linked_list_cycles)
add_subdirectory(exc/max_profit)
add_subdirectory(exc/bs_sorted)
add_subdirectory(exc/ransom_note)
add_subdirectory(exc/longest_palindrome)
add_subdirectory(exc/reverse_linked)
add_subdirectory(exc/first_bad)